[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "token-economist-rl"
version = "1.0.0"
description = "An OpenEnv-compatible RL environment that trains agents to self-regulate their reasoning budget"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "matplotlib",
    "openai",
    "pydantic",
    "openenv-core>=0.2.0",
]

[project.scripts]
train = "train:main"
inference = "inference:main"
server = "server.app:main"
